--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <a class="button-icon" href="3751441030"
               ><img src="./icons/icon-phone.svg"
             /></a>
-            <a class="button-icon" href="3751441030"
+            <a class="button-icon" href="https://www.gmail.com"
               ><img src="./icons/icon-important_mail.svg"
             /></a>
-            <a class="button-icon" href="3751441030"
+            <a class="button-icon" href="https://www.instagram.com"
               ><img src="./icons/icon-instagram.svg"
             /></a>
-            <a class="button-icon" href="3751441030"
+            <a class="button-icon" href="https://www.twitter.com"
               ><img src="./icons/icon-twitter_squared.svg"
             /></a>
           </div>
@@ -220,13 +220,13 @@
             <a class="button-icon" href="3751441030"
               ><img src="./icons/icon-phone.svg"
             /></a>
-            <a class="button-icon" href="3751441030"
+            <a class="button-icon" href="https://www.gmail.com"
               ><img src="./icons/icon-important_mail.svg"
             /></a>
-            <a class="button-icon" href="3751441030"
+            <a class="button-icon" href="https://www.instagram.com"
               ><img src="./icons/icon-instagram.svg"
             /></a>
-            <a class="button-icon" href="3751441030"
+            <a class="button-icon" href="https://www.twitter.com"
               ><img src="./icons/icon-twitter_squared.svg"
             /></a>
           </div>
